<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/roboto_regular_bold_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingBottom="0dp"
                android:text="@string/get_bt_address_instruction1" />

            <TextView
                android:id="@+id/txt_navigate_bt_address"
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_bt_address_instruction_item_1" />

            <TextView
                android:id="@+id/abt_phone"
                style="@style/roboto_regular_15dp_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:text="click here." />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/get_bt_address_instruction_item_2" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/get_bt_address_instruction_item_3" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/get_bt_address_instruction_item_4" />

            <EditText
                android:id="@+id/text_bt_address"
                style="@style/roboto_regular_15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:hint="Bluetooth Address"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text=""
                android:visibility="visible" />

            <include layout="@layout/full_divider" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cancel_continue"
                    style="@style/roboto_medium_16dp_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="30dp"
                    android:paddingLeft="@dimen/app_margin_right"
                    android:paddingRight="@dimen/app_margin_right"
                    android:paddingTop="36dp"
                    android:text="@string/cancel" />
                <!--<TextView-->
                <!--android:id="@+id/abt_phone"-->
                <!--style="@style/roboto_medium_16dp_blue"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="50"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="right"-->
                <!--android:clickable="true"-->
                <!--android:gravity="right"-->
                <!--android:text="@string/about_phone"-->
                <!--android:paddingLeft="@dimen/app_margin_right"-->
                <!--android:paddingTop="@dimen/app_margin_right"-->
                <!--android:paddingRight="@dimen/app_margin_right"-->
                <!--android:paddingBottom="30dp" />-->
            </TableRow>
        </LinearLayout>

    </ScrollView>


</LinearLayout>